--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@ebay/nice-modal-react": "^1.2.10",
-    "ahooks": "^3.7.8",
+    "ahooks": "3.7.8",
     "antd": "^4.23.4",
     "array-move": "^4.0.0",
     "d-layout": "^1.5.5",
