--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "antd": "^4.23.4",
     "array-move": "^4.0.0",
     "d-layout": "^1.5.5",
+    "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-draggable": "^4.4.6",
+    "react-sortable-hoc": "^2.0.0",
     "umi": "^3.5.41",
     "umi-plugin-keep-alive": "^0.0.1-beta.35"
   },
